# ZenOS

./: .gitmodules  Cargo.toml  README  README.md  build.sh  run.sh
.github/workflows/: rust.yml
qemu-testing/: run.sh
qemu-testing/esp/: NvVars
qemu-testing/esp/efi/boot/: bootx64.efi
src/: lib.rs  main.rs
src/ds/: string.rs  vec.rs
src/fs/: entry.rs  file.rs  filesystem.rs  global.rs  mod.rs  rom.rs
src/globals/: mod.rs
src/init/: init.rs  main.rs  mod.rs
src/io/: mod.rs
src/lang/: compiler.rs  kernel_interpreter.rs  mod.rs  module.rs  opcode.rs  parser.rs  platform.rs  register.rs  scope.rs  stdlib.rs  strong_u64.rs  tokenizer.rs  value.rs  vm.rs
src/lang/ast/: array.rs  array_assign.rs  array_index.rs  binop.rs  func_call.rs  function.rs  mod.rs  node.rs  null.rs  number.rs  ret.rs  root.rs  string.rs  var_assign.rs  var_ref.rs
src/math/: mod.rs
src/mem/: alloc.rs  mod.rs  shared_alloc.rs  util.rs
src/process/: mod.rs  process.rs  process_manager.rs
src/text/: mod.rs
