[package]
name = "zen_os"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
uefi = "0.24"
uefi-services = "0.21"
libm = "0.2"
linked_list_allocator = "0.10.5"
serde = { version = "1.0.225", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "2.0", default-features = false, features = ["alloc", "serde", "derive"] }

[profile.dev]
opt-level = 0          # no optimisation – easier to step through
debug = true           # include full DWARF symbols
debug-assertions = true
overflow-checks = true
